--- a/custom.css
+++ b/custom.css
@@ -1,9 +1,19 @@
-.container-fluid{
+body{
+	background: black; /* For browsers that do not support gradients */
+	background: -webkit-linear-gradient(left, black, white , black); /* For Safari 5.1 to 6.0 */
+	background: -o-linear-gradient(left, black,white, black); /* For Opera 11.1 to 12.0 */
+	background: -moz-linear-gradient(left, black,white, black); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(to right, black,white , black); /* Standard syntax */
+}
+footer{
 	background-image: url("img/full.jpg");
-	background-repeat : no-repeat;
-	background-attachment : fixed;
-	background-size: 100%;
-
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+}
+.container{
+	background-image: url("img/full.jpg");
+	background-repeat: no-repeat;
+	background-attachment: fixed;	
 }
 .Article{
 	margin: 25px;
@@ -31,16 +41,22 @@
 .bottomArticle{
 	border-left: solid 5px yellow;
 	padding-left: 5px;
+	margin-top: 30px;
 }
 .whiteText{
 	color: white;
 }
 .yellowText{
 	color: yellow;
-	font-weight: bold;
 }
 .textUpper{
 	text-transform: uppercase;
+}
+.boldText{
+	font-weight: bold;
+}
+.bolderText{
+	font-weight: bolder;
 }
 .left-img{
 	float: left;
@@ -48,7 +64,24 @@
 	margin: 5px;
 	padding: 5px;
 }
-.titleImg img{
-	width: 85%;
-
+.encart{
+	border-top: solid 1px yellow;
+	border-bottom: solid 1px yellow;
+	background-color: rgba(255,255,255,0.2);
+	max-width: 400px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+.listTitle{
+	font-weight: bold;
+}
+.list-group-item{	
+	background-color: rgba(125,125,125,0.2);
+	border-left: none;
+	border-right: none;
+	border-radius: none;
+	border-color: rgba(125,125,125,0.4);
+	padding: 10px;
+	font-weight: bolder;
+	color: grey;
 }
