--- a/custom.css
+++ b/custom.css
@@ -1,22 +1,38 @@
 body{
 	background: black; /* For browsers that do not support gradients */
-	background: -webkit-linear-gradient(left, black, white , black); /* For Safari 5.1 to 6.0 */
-	background: -o-linear-gradient(left, black,white, black); /* For Opera 11.1 to 12.0 */
-	background: -moz-linear-gradient(left, black,white, black); /* For Firefox 3.6 to 15 */
-	background: linear-gradient(to right, black,white , black); /* Standard syntax */
+	background: -webkit-linear-gradient(left,black, white ,black ); /* For Safari 5.1 to 6.0 */
+	background: -o-linear-gradient(left,black, white , black); /* For Opera 11.1 to 12.0 */
+	background: -moz-linear-gradient(left,black, white , black); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(to right, black, white, black); /* Standard syntax */
 }
 footer{
-	background-image: url("img/full.jpg");
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-}
-.container{
-	background-image: url("img/full.jpg");
-	background-repeat: no-repeat;
-	background-attachment: fixed;	
+
 }
 .Article{
 	margin: 25px;
+	max-width: 800px;
+}
+.back{
+	background-image: url("img/full.jpg");
+	background-repeat: no-repeat;
+}
+.title{
+	/*background-image: url("img/title.jpg");
+	background-repeat: no-repeat;*/
+	margin: auto;
+
+}
+.title img{
+	z-index: -1;
+}
+.middle{
+	/*background-image: url("img/middle.jpg");
+	background-repeat: no-repeat;*/
+	min-width: 100%;
+	min-height: 100%;
+}
+.footer{
+	margin-top: 1200px;
 }
 .topArticle{
 	background-color: black;
